# OpenAEC-Workspace-Composer

./: .gitignore  ANALYSIS.md  CLAUDE.md  HANDOFF.md  OpenAEC-Workspace-Composer.code-workspace  README.md  SOURCES.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
.claude-handoff/: CLAUDE-CODE-PROMPT.md  ORCHESTRATOR-DATA-REFERENCE.md  SPEC.md
.github/workflows/: ci.yml  release.yml
scripts/: bump-version.cjs  check-prerequisites.js  compact-docker.bat  dev.sh  ensure-dev-running.sh  ensure-path.js
src/: App.tsx  index.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config_writer.rs  git.rs  installer.rs  lib.rs  main.rs  manager.rs  prerequisites.rs  registry.rs  skill_scanner.rs  workspace.rs
src-tauri/src/generators/: common.rs  mod.rs  skill_package.rs  version_upgrade.rs
src-tauri/src/gpu_server/: config.rs  mod.rs  mutagen.rs  provisioning.rs  ssh.rs
src/components/: FeedbackDialog.tsx  Header.tsx  InstallPreview.tsx  PackageSelector.tsx  PageTransition.tsx  PhaseOverview.tsx  PresetSelector.tsx  SearchBar.tsx  Sidebar.tsx  StatusBar.tsx  Titlebar.tsx  UpgradeConfig.tsx  WorkflowTypeSelector.tsx  WorkspaceConfig.tsx
src/layouts/: AppLayout.tsx
src/lib/: claude-settings-schema.ts  gpu-types.ts  hooks-templates.ts  mcp-servers.ts  package-logos.ts  packages.ts  presets.ts  registry.ts  skill-types.ts  workflows.ts
src/pages/: AboutPage.tsx  AuthPage.tsx  CommandsPage.tsx  ConfigurePage.tsx  CoreFilesPage.tsx  DashboardPage.tsx  GitPage.tsx  McpPage.tsx  (+17 more)
(+41 files in other folders)
